[Assets] Complete thesis presentation

--- a/msc_thesis/index.html
+++ b/msc_thesis/index.html
@@ -7,7 +7,7 @@
     <title>Planning green hydrogen production on the Dutch North Sea</title>
     <link rel="shortcut icon" href="./../favicon.ico"/>
     <link rel="stylesheet" href="./../dist/reveal.css" />
-    <link rel="stylesheet" href="./../dist/theme/black.css" id="theme" />
+    <link rel="stylesheet" href="./../dist/theme/white.css" id="theme" />
     <link rel="stylesheet" href="./../css/highlight/github.css" />
 
   </head>
@@ -28,53 +28,121 @@ Niels Wouda
 <br>
 
 <small>(feel free to ask questions during the presentation)</small>
-</script></section><section  data-markdown><script type="text/template">
+
+<aside class="notes"><p>This presentation is about my master&#39;s thesis in OR. It won&#39;t be very long (I 
+don&#39;t have a tonne to say), but I do want to share some of the highlights with you.</p>
+<p>Note that I haven&#39;t given this presentation before, so I don&#39;t know how long it&#39;ll be.
+Might be fifteen minutes, might be thirty - who knows!</p>
+<p>Ask questions whenever you like - I don&#39;t mind.</p>
+</aside></script></section><section  data-markdown><script type="text/template">
 # This presentation
 
 - Problem setting
 
+- Models
+
 - Results
 
-- Conclusion
-
-<aside class="notes"><p>TODO</p>
+<aside class="notes"><p>This presentation consists of roughly three parts.</p>
+<p>I&#39;ll first discuss the problem setting of designing a hydrogen supply chain network
+using offshore wind electricity as a feedstock. In this network we pay particular
+attention to uncertainty in the wind electricity supply.</p>
+<p>I then present the models in a very abstracted view. I won&#39;t go into too much math,
+nor discuss the solution method, since that&#39;s not that interesting. But you do need to understand
+at least the basics of these models to understand the results.</p>
+<p>We then directly move to the modelling results, since that&#39;s the coolest bit of my thesis :).</p>
 </aside></script></section><section ><section data-markdown><script type="text/template">
 # Problem setting
-</script></section><section data-markdown><script type="text/template">
-## Setting
 
 - Hydrogen production from offshore wind electricity
 
 - Electrolysis: $\ce{2H2O + electricity -> 2H2 + O2}$ 
 
 - Wind intermittency (randomness)
-
-<aside class="notes"><p>TODO</p>
-</aside></script></section><section data-markdown><script type="text/template">
+</script></section><section data-markdown><script type="text/template">
 ## Research questions
   
 - Where do we place electrolysers?
     - On land, or
     - Offshore, on artificial islands or re-used gas platforms?
-- How do we obtain robust solutions?
-- Which parameters particularly influence production costs?
+- How do we obtain robust solutions w.r.t. uncertain wind electricity?
+- Which parameters particularly influence hydrogen costs?
 
-<aside class="notes"><p>TODO</p>
-<p>Robust wrt wind randomness</p>
+<aside class="notes"><p>These three main questions I aim to answer in the coming few slides.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Land-based electrolysers
 
 <img width="80%" src="images/onshore.svg" />
 <!--- ![Schema](images/onshore.svg) --->
 
-<aside class="notes"><p>TODO</p>
+<aside class="notes"><p>The first option is to build the electrolysers on land.
+Offshore wind parks are connected to land-based electrolysers via electrical cables.
+The hydrogen produced there is inserted directly into the onshore gas grid.</p>
+<p>An obvious benefit of this setting is that electrolysers can be constructed, operated and maintained on land more easily, and require no expensive land reclamation projects or existing offshore infrastructure to function.</p>
+<p>A downside is that longer, costlier electrical cables are required to connect offshore wind parks to the electrolyser plants on land.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Offshore electrolysers
 
 <img width="80%" src="images/offshore.svg" />
 <!--- ![Schema](images/offshore.svg) --->
 
-<aside class="notes"><p>TODO</p>
+<aside class="notes"><p>The second option is to build both wind parks and electrolysers offshore.
+Offshore wind parks are then connected with offshore electrolysers, again via electrical cables.
+These offshore electrolysers are built on artificial islands, or on re-used gas platforms.
+The hydrogen produced there is brought to shore via gas pipelines.</p>
+<p>An advantage of this is that wind parks and electrolysers are built near each other, which reduces electrical cable lengths, and thus costs.
+Additionally, offshore electrolysers allow the exploitation of areas far offshore which cannot easily be reached with cables from land.</p>
+<p>Potential downsides of this setting are the cost of constructing artificial islands, and unclear cost and availability of re-using and converting offshore gas platforms for hydrogen production.</p>
+<p>Of course, another final option is to allow both land- and sea-based electrolysers in an integrated scenario.
+That we also consider.</p>
+<p>We are now briefly going to discuss the model stuff, and then directly move to the results.</p>
+</aside></script></section></section><section ><section data-markdown><script type="text/template">
+# Models
+
+- Objective: minimise construction and operation costs of the hydrogen supply chain
+
+- Constraints: production capacity should be sufficient to meet demand
+
+- Decisions: where to construct wind parks, electrolysers, and electrical cables
+
+<aside class="notes"><p>Each model setting/formulation in my thesis basically wants to achieve this.
+The constraints and precise objectives vary a little, but in the abstract this is
+the structure of all of them.</p>
+</aside></script></section><section data-markdown><script type="text/template">
+## Robust solutions
+
+What about uncertainty in production capacity?
+
+- One way: relax demand constraint
+
+  - Idea: price out production shortfalls (Lagrangian relaxation)
+  
+    _How do we tell the model about this?_
+  
+   _Solution:_ stochastic programming with many different wind scenarios
+
+- Alternative: overcapacity in electricity production
+
+  - Intuition: a little overcapacity might still produce sufficient electricity, even in 'bad' scenarios
+
+  - Could result in expensive solutions, but is simple to solve
+
+<aside class="notes"><p>We haven&#39;t seen the uncertainty in wind electricity yet in the model formulations.
+We consider that in two ways.</p>
+<ul>
+<li><p>First, we relax the hard demand constraint into a soft constraint (<strong>draw on slide p&gt;d, lambda, s = d - p</strong>). That alone is not
+sufficient to get to a more robust formulation, since the standard model does not know about wind capacities: it sees only one
+realisation.</p>
+<p>We correct this by optimising over many different wind scenarios at the same time, via a stochastic programming (re)formulation.
+Drawing wind scenarios is challenging, and solving stochastic programming models isn&#39;t easy either - nor is it simple to explain.
+As such, we also consider an alternative.</p>
+</li>
+<li><p>An alternative is conceptually quite simple: we could just build a large supply chain.
+If we increase the production capacity, eventually we obtain a network that produces sufficient hydrogen no matter the annual wind capacity factors.
+A downside is that this - of course - might be very expensive.</p>
+</li>
+</ul>
+<p>We&#39;ll see both options in the results section, next.</p>
 </aside></script></section></section><section ><section data-markdown><script type="text/template">
 # Results
 
@@ -82,7 +150,7 @@ Niels Wouda
 
 <aside class="notes"><p>Rather than the objective values, we present costs as LCoH$_2$ to facilitate
 comparison across demand levels.</p>
-<p>Remember LCoH$<em>2$ as the _production cost</em> of a kilogram of hydrogen.
+<p>Remember LCoH$_2$ as the production cost of a kilogram of hydrogen.
 This is similar to how electricity is priced when constructing new power plants
 or energy systems: as the levelised cost of electricity (LCoE).</p>
 </aside></script></section><section data-markdown><script type="text/template">
@@ -95,22 +163,56 @@ Compare:
  - Dutch electricity use is about 110TWh/y
  - Total Dutch energy use is about 650TWh/y
 
-<aside class="notes"><p>TODO</p>
+<aside class="notes"><p>This is all still based on just the deterministic models, without any stochastic stuff.
+We start simple.</p>
+<p>In these three panels we show the hydrogen costs for different demand levels, wind capacity factors (worst = 30% annually,
+average = 42%, and best = 55%), and the various model settings (electrolysers on land, offshore, or both).</p>
+<p>Observations:</p>
+<ul>
+<li>Costs slope up a little with increasing demand. 
+This is largely due to needing more wind parks in deeper waters, which are more expensive to construct.</li>
+<li>Each model setting (land, offshore, integrated) obtains almost the same hydrogen costs.
+That suggest there is no economic reason to prefer land- or sea-based electrolysers.
+In this case, it is probably best to opt for electrolysers on land: they&#39;re easier to access, maintain, and do not need artificial islands or gas platforms.</li>
+<li>Almost none of the solutions use re-use gas platforms.
+This suggests their role in the future energy system might be limited.</li>
+</ul>
+<p>We now turn to the stochastic model, and limiting shortfalls in production.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Recourse solution
 
-<div style="height: 50vh;">
-    <img height="100%" src="images/stoch_lcoh2.svg" style="background-color:white;"/>
-    <img height="100%" src="images/stoch_imports.svg" style="background-color:white;"/>
+<div style="display: flex; justify-content: center;">
+    <img width="48.3%" src="images/stoch_lcoh2.svg" style="background-color:white;"/>
+    <img width="50%" src="images/stoch_imports.svg" style="background-color:white; margin-left: 20px;"/>
 </div>
 
 
 <!--- ![Schema](images/stoch_lcoh2.svg) --->
 <!--- ![Schema](images/stoch_imports.svg) --->
 
-($\lambda$: LCoH$_2$ of stored/imported hydrogen)
+($\lambda$: LCoH$_2$ of a kg hydrogen shortfall)
 
-<aside class="notes"><p>TODO <em>maybe</em> slide on recourse?</p>
+<aside class="notes"><p>$\lambda$ here is basically how we price out production shortfalls. 
+So in these two figures we present the Lagrangian relaxation (&#39;deterministic&#39;) and a number of replications of the stochastic model
+(&#39;recourse&#39;).
+The idea behind these replication is that, although we solve for a number of wind scenarios in a single model, we do not know whether
+those scenarios accurately reflect the underlying distributions.
+There is always a sampling error involved.
+Repeating the solution process a number of times through replication, we obtain a much better sense of those sampling errors.</p>
+<p>Observations:</p>
+<ul>
+<li><p>There is a regime switch from all shortfalls/no production for prices &lt;4 to almost full production for prices &gt;4.5.
+Compare that average production costs on previous slide.</p>
+</li>
+<li><p>The deterministic model does not do much worse in terms of costs/imports compared to the recourse formulation.
+This suggests explicit modelling of wind uncertainties need not result in substantially better solutions.</p>
+<p><strong>But</strong> before we conclude that, a <em>lot</em> depends on dependencies in wind are modelled.
+And those are quite uncertain in my thesis, because the data is less than ideal.</p>
+</li>
+</ul>
+<p>This is the stochastic formulation. 
+We next look at how we can obtain a robust solution by planting some overcapacity in wind electricity.
+This might eliminate production shortfalls altogether.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Robustness
 
@@ -121,21 +223,26 @@ Compare:
 <img src="images/reliability.svg" style="background-color:white;" />
 <!--- ![Schema](images/reliability.svg) --->
 
-($\delta$: percentage overcapacity in electricity generation relative to a demand target $d \ge 0$)
+($\delta$: percentage overcapacity in installed capacity in electricity generation)
 
-<aside class="notes"><p>This is usually achieved via a (joint) chance constraint in the model formulation.
-That did not solve, so instead we built a little overcapacity using the regular,
-deterministic formulation. That is very effective in practice.</p>
-<p>Given a demand target $d$, we plant $(1 + \delta) d$ instead, for some overcapacity
-parameter $\delta \ge 0$.</p>
-<p>(this figure based on 10GW/88TWh annually)</p>
+<aside class="notes"><p>We investigate overcapacity in electricity generation through a parameter $\delta$,
+which states the percentage overcapacity relative to a demand level (the many different 
+blue lines in the plot indicate different demand levels).</p>
 <p>Observations:</p>
 <ul>
 <li>At $\delta=0$% (no overcapacity), the solutions generally have a 50/50 chance of producing
 sufficient hydrogen in a year.</li>
-<li>That scales <em>rapidly</em> as we increase the overcapacity. At $\delta=5$% the
-empirical service level already reaches 98.2% (based on 10,000 samples).</li>
+<li>That scales <em>rapidly</em> as we increase the overcapacity. At $\delta=10$% the
+empirical service level already reaches about 80%.</li>
+<li>At $\delta = 25$%, we find about $98-99%$%.</li>
 </ul>
+<p>Also observe that the extra costs are not even that substantial: for +20% cost, we already obtain a very robust system.
+Costs are +20%, rather than +25%, since we only need wind parks and electrical cables, but not also additional electrolysers.</p>
+<p>Connecting this excess electricity generation capacity to electrolysers is easier if these electrolysers are constructed in central places.
+That suggests, again, that land-based electrolysers are the way to go, at least initially.</p>
+<p>Having discussed stochasticity and robust solutions,
+we now turn to a sensitivity analysis investigating the effects of our parameter
+choices on the modelling result.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Sensitivity analysis
 
@@ -151,23 +258,28 @@ Particularly important:
 - Average wind capacity factor
 
 <aside class="notes"><p>Here we vary individual parameters w.r.t. their baseline parameter levels.</p>
-<p>TODO</p>
+<p>Observations: (<strong>in presentation)</strong></p>
+<ul>
+<li>Explain baselines</li>
+<li>Discuss the important parameters (see slide).</li>
+</ul>
 <p>There&#39;s also a two-way sensitivity plot (where we study the interaction of
 two parameter level changes at the same time), but that is nearly impossible to
 read from a slide. So for that thing you&#39;ll have to read my thesis :).</p>
+<p>In terms of content, this is the end of the presentation and I&#39;ll now wrap up.</p>
 </aside></script></section></section><section  data-markdown><script type="text/template">
 # Conclusion
 
 - Construct electrolysers on land, or on artificial islands
-- Existing gas platforms have no (serious) place in the green hydrogen production chain
-- At the national scale, robustness is cheap (+5% cost on average, for a service level around 98-99%)
+- Existing gas platforms have no place in the green hydrogen production chain
+- At scale robust solutions are cheap (+20% cost for a service level around 98-99%)
 - Green hydrogen can be produced today at costs around €4-4.5/kg
 - Costs are sensitive to
   - Capital costs
   - Electrolyser efficiencies
   - Wind capacity factors
   
-  But these are all steadily improving!
+  (these are all steadily improving!)
 
 <aside class="notes"><p>And future research. In particular: </p>
 <ul>
@@ -181,7 +293,9 @@ read from a slide. So for that thing you&#39;ll have to read my thesis :).</p>
 </ul>
 </aside></script></section><section  data-markdown><script type="text/template">
 # Questions?
-</script></section></div>
+
+<aside class="notes"><p>Thank everyone for their time.</p>
+</aside></script></section></div>
     </div>
 
     <script src="./../dist/reveal.js"></script>
