--- a/msc_thesis/index.html
+++ b/msc_thesis/index.html
@@ -154,6 +154,29 @@ comparison across demand levels.</p>
 This is similar to how electricity is priced when constructing new power plants
 or energy systems: as the levelised cost of electricity (LCoE).</p>
 </aside></script></section><section data-markdown><script type="text/template">
+## An example solution
+
+<div style="display: flex; align-items: center; justify-content: center; height: 70vh;">
+<img height="100%" src="images/example_solution.svg" style="background-color: white;"/>
+<!-- ![Example solution](images/example_solution.svg) -->
+<div style="margin-left: 20px; margin-top: auto; margin-bottom: auto;">
+
+- No platforms are re-used!
+
+- Preference for southern North Sea
+
+</div>
+</div>
+
+<aside class="notes"><p>Before we look at general figures, it might be helpful to get a feel of the scale
+of these solutions, and what I propose in practice. This is an example solution
+for about 2.5Mt of annual hydrogen production. That&#39;s roughly half of what the
+chemical industry alone will need annually.</p>
+<p><strong>Explain figure (draw)</strong></p>
+<p>No platforms are re-used here.</p>
+<p>Preference for the southern North Sea is easy to explain: it&#39;s much shallower.
+This is a lot cheaper than constructing far offshore.</p>
+</aside></script></section><section data-markdown><script type="text/template">
 ## Deterministic solution
 
 <img width="120%" src="images/lcoh2.svg" style="background-color:white;" />
@@ -185,7 +208,6 @@ This suggests their role in the future energy system might be limited.</li>
     <img width="48.3%" src="images/stoch_lcoh2.svg" style="background-color:white;"/>
     <img width="50%" src="images/stoch_imports.svg" style="background-color:white; margin-left: 20px;"/>
 </div>
-
 
 <!--- ![Schema](images/stoch_lcoh2.svg) --->
 <!--- ![Schema](images/stoch_imports.svg) --->
