[Assets] Fix image jumping off page

--- a/msc_thesis/index.html
+++ b/msc_thesis/index.html
@@ -156,7 +156,7 @@ or energy systems: as the levelised cost of electricity (LCoE).</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## An example solution
 
-<div style="display: flex; align-items: center; justify-content: center; height: 70vh;">
+<div style="display: flex; justify-content: center; height: 65vh;">
 <img height="100%" src="images/example_solution.svg" style="background-color: white;"/>
 <!-- ![Example solution](images/example_solution.svg) -->
 <div style="margin-left: 20px; margin-top: auto; margin-bottom: auto;">
