[Assets] Update RHP presentations

--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -236,6 +236,14 @@ and <code>rhp_notes</code> (RHP implementation details, where applicable) column
 
 <aside class="notes"><p>The <code>id_parent</code> column references back into the <code>wares</code> table. So <code>Eastern sigillata</code> is a <code>Fine ware</code> (under <code>2</code>), and <code>Pompeian red ware</code> is a <code>Coarse ware</code> (under <code>3</code>).</p>
 </aside></script></section><section data-markdown><script type="text/template">
+## Shapes and functions
+
+TODO
+</script></section><section data-markdown><script type="text/template">
+## Provenances
+
+TODO
+</script></section><section data-markdown><script type="text/template">
 ## Activities
 
 (not fully implemented)
@@ -245,7 +253,7 @@ Parts of it exist, parts do not - it is not really ready for querying, and still
 needs quite a bit of work.</p>
 <p>That work will not be done for the prototype.</p>
 </aside></script></section><section data-markdown><script type="text/template">
-## Things not mapped
+## Things not (yet) mapped
 
 - Coarse ware typology
 
@@ -259,15 +267,6 @@ needs quite a bit of work.</p>
 part the schema will need to be updated to accommodate these. Here I want to
 present a list of content that we have not (yet) standardised, and is as such
 not in the RHPdb.</p>
-</aside></script></section><section data-markdown><script type="text/template">
-## Not yet mapped
-
-- Ceramic shapes
-- Ceramic functions
-- Provenances/productions
-
-<aside class="notes"><p>These lists are (almost) all complete, but I have not yet implemented them
-(TODO 2/1/2021). I want to do so later this month.</p>
 </aside></script></section></section><section  data-markdown><script type="text/template">
 # How we got here
 
