[Assets] Remove notes

--- a/english_pres1/index.html
+++ b/english_pres1/index.html
@@ -22,16 +22,7 @@
 Niels A. Wouda
 
 01-12-2021
-
-<aside class="notes"><p>Syngas is synthetic gas, as opposed to natural gas</p>
-<p>Most of my research deals with the <em>how</em>, not the <em>why</em>. 
-In particular, the <em>how</em> is &#39;how to design a syngas production network&#39;.
-But that is all very mathsy, so I will not go into those details today.
-Instead I am going to focus on the <em>why</em>, that is, why we want to do all that complicated math.</p>
-<p>Thus I am going to present a motivation for what I am doing, instead of talk about what I am actually doing.
-First, I want to start with a few basic facts about current energy systems.
-Then, I go into detail about future energy systems, and why syngas might be a very good idea on the way there.</p>
-</aside></script></section><section ><section data-markdown><script type="text/template">
+</script></section><section ><section data-markdown><script type="text/template">
 ## Motivation
 
 <img width="100%" src="images/cbs-energy-production.svg" alt="CBS (2021) data on Dutch energy production." />
@@ -55,17 +46,7 @@ Then, I go into detail about future energy systems, and why syngas might be a ve
 <div style="font-size: .75em;">
     (Electrolysis cost has gone down by ~40% in the past five years [2])
 </div>
-
-<aside class="notes"><p>Solar is great in homes, but not nearly as reliable as (offshore) wind.
-First offshore wind park in Europe was built in 1995 (very small, in the Baltic).
-First Dutch one in 2007.
-First subsidy-free Dutch offshore wind park tendered in 2017 (HKZ, Vattenfall), to be commissioned by 2023.</p>
-<p>Cost-competitive renewable electricity generation is a solved problem.</p>
-<p>A lot less is known about methanation and carbon capture, I am afraid.
-Those technologies are still quite new, and I could not really find reviews on their costs.
-Undoubtedly those will also show up in the coming few years.
-Based on the other figures, I am fairly confident they will also show cost reductions.</p>
-</aside></script></section><section data-markdown><script type="text/template">
+</script></section><section data-markdown><script type="text/template">
 ## Motivation
 
 - Syngas today is more expensive than natural gas
