[Assets] Add CC; fix figure production order

--- a/english_pres1/index.html
+++ b/english_pres1/index.html
@@ -31,9 +31,9 @@ Niels A. Wouda
 - In NL, about 45% of total energy production is based on natural gas [3]
 - Syngas has 'simple' chemistry:
     - **Electrolysis**: water + electricity $\longrightarrow$ hydrogen (+ oxygen)
-    - **Methanation**: hydrogen + carbon dioxide + electricity $\longrightarrow$ syngas (+ water)
-- When syngas is burned, carbon dioxide can be captured to make new syngas
-- Syngas is **carbon-neutral** when renewable electricity is also used
+    - **Carbon capture**: exhaust fumes from factories + electricity $\longrightarrow$ carbon dioxide
+    - **Methanation**: hydrogen + carbon dioxide $\longrightarrow$ syngas (+ water)
+- Syngas is (mostly) **carbon-neutral** when renewable electricity is also used
 </script></section><section data-markdown><script type="text/template">
 ## Motivation
 
