[Assets] Update slides based on feedback

--- a/syngas/index.html
+++ b/syngas/index.html
@@ -29,11 +29,18 @@ Niels A. Wouda
 <!--- ![CBS (2021) data on Dutch energy production](images/cbs-energy-production.svg) --->
 
 - In NL, about 45% of total energy production is based on natural gas [3]
+- Pollutes carbon dioxide
+</script></section><section data-markdown><script type="text/template">
+## Motivation
+
 - Syngas has 'simple' chemistry:
-    - **Electrolysis**: water + electricity $\longrightarrow$ hydrogen (+ oxygen)
-    - **Carbon capture**: exhaust fumes from factories + electricity $\longrightarrow$ carbon dioxide
-    - **Methanation**: hydrogen + carbon dioxide $\longrightarrow$ syngas (+ water)
-- Syngas is (mostly) **carbon-neutral** when renewable electricity is also used
+    - **Electrolysis**: water + electricity $\longrightarrow$ hydrogen
+    - **Carbon capture**: exhaust fumes + electricity $\longrightarrow$ carbon dioxide
+    - **Methanation**: hydrogen + carbon dioxide $\longrightarrow$ syngas
+- Syngas is **carbon-neutral** when renewable electricity is used
+
+<img width="80%" src="images/diagram.svg" alt="Production diagram." />
+<!--- ![Production diagram](images/diagram.svg) --->
 </script></section><section data-markdown><script type="text/template">
 ## Motivation
 
@@ -44,7 +51,7 @@ Niels A. Wouda
 <!--- ![IRENA Wind and Solar PV data](images/irena-wind-solar.svg) --->
 
 <div style="font-size: .75em;">
-    (Electrolysis cost has gone down by ~40% in the past five years [2])
+    (Electrolysis cost has gone down by ~40% in past five years [2])
 </div>
 </script></section><section data-markdown><script type="text/template">
 ## Motivation
@@ -56,18 +63,20 @@ Niels A. Wouda
 </script></section></section><section  data-markdown><script type="text/template">
 ## Solution approach
 
-- If we can design a syngas production network at minimal cost, we:
-  - have an estimate of the cost of syngas production;
-  - know the relative costs of all parts of the network;
-  - can determine a carbon tax that makes syngas production cost-competitive.
-- This network design problem has many **policy implications**!
+- Designing a syngas production network at minimal cost:
+  - gives estimate of syngas production cost;
+  - yields relative costs of all parts of the network;
+  - can be used to determine a cost-competitive carbon tax.
+- Has many **policy implications**!
 
-So, what I work on is this:
+<br>
+
+So, what I work on is:
 > How to construct a minimum-cost network for syngas production using captured carbon dioxide and renewable electricity?
 </script></section><section  data-markdown><script type="text/template">
 ## Conclusion
 
-- Syngas is great in theory, but expensive in practice
+- Syngas is great in theory, expensive in practice
 - I want to find out what drives the cost of syngas production
 - What is needed to make syngas cost-competitive?
 </script></section><section  data-markdown><script type="text/template">
