[Assets] Fix images

--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <title>RHP Technical meeting</title>
-    <link rel="shortcut icon" href="./../favicon.ico"/>
+    <link rel="shortcut icon" href="./../favicon.ico" />
     <link rel="stylesheet" href="./../dist/reveal.css" />
     <link rel="stylesheet" href="./../dist/theme/white.css" id="theme" />
     <link rel="stylesheet" href="./../css/highlight/github.css" />
+
 
   </head>
   <body>
@@ -62,12 +63,7 @@ Of course, the mapping process is still very laborious.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Schema
 
-<img width="85%" 
-     src="images/schema.svg" 
-     style="transform: rotate(90deg);  margin-top: -400px;" />
-
-<!--- This is a huge hack but ensures reveal-md actually copies the svg file -->
-<!--- ![Schema](images/schema.svg) --->
+<img width="85%" src="images/schema.svg" style="transform: rotate(90deg);  margin-top: -400px;" />
 
 <aside class="notes"><p>We will discuss this in detail in the next few slides, zooming in on each part
 of the database.</p>
