[Assets] Further revise PL planning

--- a/elective_hours/index.html
+++ b/elective_hours/index.html
@@ -26,8 +26,9 @@ Niels A. Wouda
 </script></section><section ><section data-markdown><script type="text/template">
 # The problem
 
-- Partially fixed schedule
-- Other part elective hours
+- Weekly schedule
+- Partially fixed
+- Other part electives
 - Learners get to decide which electives
 </script></section><section data-markdown><script type="text/template">
 # The problem
@@ -38,9 +39,9 @@ Niels A. Wouda
 </script></section></section><section ><section data-markdown><script type="text/template">
 # The approach
 
-- Multiple time periods
-- In each period:
-  - Optimise schedule given belief about learner demands
+- Multiple weeks
+- Each week:
+  - Optimise schedule given beliefs about learner demands
   - Update beliefs based on learner choices
 </script></section><section data-markdown><script type="text/template">
 # Optimise schedule
